<resources>
    <string name="google_app_id">1098468135284</string>
    <string name="gcm_ccs_domain">gcm.googleapis.com</string>
    <string name="app_name">Glom</string>
    <string name="PREFERENCE_FILE">com.abborg.glom.preferences</string>
    <string name="server_address">http://www.google.com</string>
    <string name="server_port">80</string>
    <string name="friends_circle_title">Friends</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_chat">Chat</string>
    <string name="menu_item_settings">Settings</string>
    <string name="loading">Loading…</string>
    <string name="location_activity_label">My Location</string>
    <string name="location_activity_title">Location</string>
    <string name="zoom_to_fit_btn_label">Fit</string>
    <string name="locate_me_btn_searching">Just a moment...</string>
    <string name="marker_msg_placeholder">Online</string>
    <string name="title_activity_main">MainActivity</string>
    <plurals name="subtitle_location_fragment">
        <item quantity="zero">No meetup</item>
        <item quantity="one">1 pin</item>
        <item quantity="other">%1$d pins</item>
    </plurals>
    <plurals name="subtitle_circle_fragment">
        <item quantity="zero">No one here</item>
        <item quantity="one">Only you</item>
        <item quantity="other">%1$d people</item>
    </plurals>
    <plurals name="subtitle_board_fragment">
        <item quantity="zero">0 item</item>
        <item quantity="one">1 item</item>
        <item quantity="other">%1$d items</item>
    </plurals>
    <string name="error_generic">Error</string>
    <string name="error_network_timeout">The request has timed out, please try again later</string>
    <string name="error_no_connection">Could not connect to our server, please try again later</string>
    <string name="error_auth_failure">Failed to authenticate, please try again</string>
    <string name="error_server_generic">There was a problem with the server, please try again later</string>
    <string name="error_network_generic">Network error, please try again</string>
    <string name="error_parse_generic">There was a problem in parsing the request, unable to proceed!</string>
    <string name="gcm_senderId">1098468135284</string>
    <string name="ACTION_OPEN_DRAWER">action.DRAWER_OPEN</string>
    <string name="ACTION_CLOSE_DRAWER">action.DRAWER_CLOSE</string>
    <string name="ACTION_RECEIVE_LOCATION">action.LOCATION_RECEIVE</string>
    <string name="EXTRA_RECEIVE_LOCATION_USERS">extra.LOCATION_RECEIVE_USERS</string>
    <string name="EXTRA_RECEIVE_LOCATION_CIRCLE_ID">extra.LOCATION_RECEIVE_CIRCLEID</string>
    <string name="EXTRA_CURRENT_USER">extra.CURRENT_USER</string>
    <string name="ACTION_CIRCLE_ENABLE_LOCATION_BROADCAST">action.CIRCLE_ENABLE_LOCATION_BROADCAST</string>
    <string name="ACTION_CIRCLE_DISABLE_LOCATION_BROADCAST">action.CIRCLE_DISABLE_LOCATION_BROADCAST</string>
    <string name="EXTRA_BROADCAST_LOCATION_USER_ID">extra.BROADCAST_LOCATION_USERID</string>
    <string name="EXTRA_BROADCAST_LOCATION_CIRCLE_ID">extra.BROADCAST_LOCATION_CIRCLEID</string>
    <string name="ACTION_USER_LOCATION_UPDATE">action.USER_LOCATION_UPDATE</string>
    <string name="EXTRA_USER_LOCATION_UPDATE">extra.USER_LOCATION_UPDATE</string>
    <string name="EXTRA_CIRCLES_LOCATION_UPDATE">extra.CIRCLES_LOCATION_UPDATE</string>
    <string name="EXTRA_SEND_TOKEN_USER_ID">extra.SEND_TOKEN_USERID</string>
    <string name="EXTRA_BROADCAST_LOCATION_DURATION">extra.BROADCAST_LOCATION_DURATION</string>
    <string name="ACTION_CREATE_EVENT">action.CREATE_EVENT</string>
    <string name="ACTION_UPDATE_EVENT">action.UPDATE_EVENT</string>
    <string name="EXTRA_EVENT_ID">extra.EVENT_ID</string>
    <string name="EXTRA_EVENT_NAME">extra.EVENT_NAME</string>
    <string name="EXTRA_EVENT_START_TIME">extra.EVENT_START_TIME</string>
    <string name="EXTRA_EVENT_END_TIME">extra.EVENT_END_TIME</string>
    <string name="EXTRA_EVENT_PLACE_ID">extra.EVENT_PLACE_ID</string>
    <string name="EXTRA_EVENT_LOCATION">extra.EVENT_LOCATION</string>
    <string name="EXTRA_EVENT_NOTE">extra.EVENT_NOTE</string>
    <string name="EXTRA_ITEM_CREATE_TIME">extra.ITEM_CREATE_TIME</string>
    <string name="ACTION_NEW_MESSAGE">action.NEW_MESSAGE</string>
    <string name="EXTRA_MESSAGE_SENDER">extra.MESSAGE_SENDER</string>
    <string name="EXTRA_MESSAGE_ID">extra.MESSAGE_ID</string>
    <string name="EXTRA_MESSAGE_CONTENT">extra.MESSAGE_CONTENT</string>
    <string name="EXTRA_MESSAGE_CIRCLE_ID">extra.MESSAGE_CIRCLEID</string>
    <string name="EXTRA_MESSAGE_TYPE">extra.MESSAGE_TYPE</string>
    <string name="ACTION_SERVER_ACK_MESSAGE">action.ACK_MESSAGE</string>
    <string name="ACTION_CREATE_DRAWING">action.CREATE_DRAWING</string>
    <string name="ACTION_JOIN_DRAWING">action.JOIN_DRAWING</string>
    <string name="EXTRA_DRAWING_ID">extra.DRAWING_ID</string>
    <string name="EXTRA_DRAWING_NAME">extra.DRAWING_NAME</string>
    <string name="EXTRA_DRAWING_FILE">extra.DRAWING_FILE</string>
    <string name="EXTRA_DRAWING_TIME">extra.DRAWING_TIME</string>
    <string name="EXTRA_DRAWING_MODE">extra.DRAWING_MODE</string>
    <string name="EXTRA_DRAWING_PATH">extra.DRAWING_PATH</string>
    <string name="ACTION_CONNECTIVITY_STATE_CHANGE">android.net.conn.CONNECTIVITY_CHANGE</string>
    <string name="EXTRA_LINK_URL">extra.LINK_URL</string>
    <string name="EXTRA_LINK_TITLE">extra.LINK_TITLE</string>
    <string name="ACTION_CREATE_LIST">action.NEW_LIST</string>
    <string name="ACTION_UPDATE_LIST">action.UPDATE_LIST</string>
    <string name="EXTRA_LIST_ID">extra.LIST_ID</string>
    <string name="ACTION_CREATE_NOTE">action.CREATE_NOTE</string>
    <string name="ACTION_UPDATE_NOTE">action.UPDATE_NOTE</string>
    <string name="EXTRA_NOTE_ID">extra.NOTE_ID</string>
    <string name="EXTRA_CAMERA_MEDIA_PATH">extra.CAMERA_MEDIA</string>
    <string name="profile_activity_label">My Profile</string>
    <string name="profile_activity_title">ProfileActivity</string>
    <string name="title_section1">Basic</string>
    <string name="title_section2">Mood</string>
    <string name="title_section3">Goal</string>
    <string name="user_name_placeholder">Name</string>
    <string name="user_id_placeholder">ID</string>
    <string name="open_map_btn">Open Map</string>
    <string name="user_status_placeholder">This is a text status!</string>
    <string name="card_host_name_placeholder">Undefined</string>
    <string name="card_host_post_time_placeholder">Some time ago</string>
    <string name="card_text_placeholder">Untitled</string>
    <string name="card_event_venue_placeholder">Undefined</string>
    <string name="card_event_note_placeholder">Event note is undefined</string>
    <string name="card_post_info">created event</string>
    <string name="card_cancel_info">cancelled event</string>
    <string name="card_edit_info">edited</string>
    <string name="time_info_just_now">Just now</string>
    <string name="time_unit_second">sec</string>
    <string name="time_unit_minute">min</string>
    <string name="time_unit_hour">hr</string>
    <string name="time_unit_day">days</string>
    <string name="time_unit_year">yr</string>
    <string name="time_unit_month">mo</string>
    <string name="time_unit_week">weeks</string>
    <string name="time_unit_and_seperator">and</string>
    <string name="time_suffix_ago">ago</string>
    <string name="card_event_datetime_format">MM/dd/yyyy, h:mm aa</string>
    <string name="card_event_time_format">h:mm aa</string>
    <string name="card_event_time">%1$s (%2$s)</string>
    <string name="undefined">undefined</string>
    <string name="card_action_edit">Edit</string>
    <string name="card_action_share">Share</string>
    <string name="card_action_attend">Attend</string>
    <string name="card_action_decline">Decline</string>
    <string name="card_action_view">View</string>
    <string name="card_action_download">Download</string>
    <string name="card_action_get_directions">Navigate</string>
    <string name="date_now">Now</string>
    <string name="card_select_app_to_launch">Complete action using</string>
    <string name="date_to_be_determined">TBD</string>
    <string name="nav_menu_header_circle">circles (%1$d)</string>
    <string name="notification_placeholder">No message</string>
    <string name="notification_offline">Not Connected</string>
    <string name="notification_connecting">Connecting…</string>
    <string name="notification_connected">Connected</string>
    <string name="notification_title_location_update">Message from GlomServer</string>
    <string name="notification_title_broadcast_location">Broadcasting location</string>
    <string name="notification_action_cancel_broadcast_location">Stop</string>
    <string name="notify_retrieving_place_info">Retrieving place…</string>
    <string name="notification_created_item_success">Item is created successfully</string>
    <string name="notification_created_item_failed">Failed to sync the created item, please try again</string>
    <string name="notification_updated_item_success">Item is updated successfully</string>
    <string name="notification_updated_item_failed">Failed to sync the update, please try again</string>
    <plurals name="notification_delete_item">
        <item quantity="one">Deleted %1$d item</item>
        <item quantity="other">Deleted %1$d items</item>
    </plurals>
    <string name="notification_delete_item_failed">Failed to sync the delete, please try again</string>
    <string name="notification_download_item_success">Downloaded %s successfully</string>
    <string name="notification_download_item_failed">Failed to downloaded %s</string>
    <string name="notification_retrieve_file_failed">Unable to retrieve this file, please try another file</string>
    <string name="notification_load_drawing_failed">Failed to load drawing</string>
    <string name="notification_copy_link">Link URL copied to clipboard</string>
    <string name="bottom_sheet_broadcast_location_toggle">Broadcast my location</string>
    <string name="bottom_sheet_broadcast_location_timepicker_title1">Broadcast until time below</string>
    <string name="bottom_sheet_broadcast_location_timepicker_title2">Share for</string>
    <string name="bottom_sheet_broadcast_location_select_duration">Or tap here to set duration instead</string>
    <string name="bottom_sheet_broadcast_location_change_interval">You can change the interval of broadcast in the settings</string>
    <string name="bottom_sheet_broadcast_location_interval_title">Share every</string>
    <string name="time_unit_hour_title">Hour</string>
    <string name="time_unit_minute_title">Minute</string>
    <string name="time_unit_second_title">Second</string>
    <string name="time_unit_before_noon">AM</string>
    <string name="time_unit_after_noon">PM</string>
    <string name="action_create_event_datetime_format">dd/MM/yyyy HH:mm:ss</string>
    <string name="title_activity_event">Event</string>
    <string name="title_activity_task">Task</string>
    <string name="hint_event_name">Name*</string>
    <string name="hint_event_start_date">From</string>
    <string name="hint_event_time">Time</string>
    <string name="hint_event_end_date">To</string>
    <string name="hint_event_location">Location</string>
    <string name="hint_note">Note</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_copy">Copy</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_star">Star</string>
    <string name="menu_item_erase">Erase</string>
    <string name="menu_item_grease_pencil">Grease Pencil</string>
    <string name="menu_item_pick_color">Color</string>
    <string name="menu_item_change_draw_size">Draw Size</string>
    <string name="menu_item_set_background">Set Background</string>
    <string name="menu_item_clear_drawing">Clear</string>
</resources>