<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.abborg.glom.ui.ProfileActivity$ProfileBasicFragment">

    <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:id="@+id/avatar_button" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name_placeholder"
                    android:id="@+id/name_textView"
                    android:padding="10dp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_id_placeholder"
                    android:id="@+id/id_textView"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_status_placeholder"
                    android:id="@+id/status_textView"
                    android:padding="10dp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/info_textView" />

        <fragment
            class="com.google.android.gms.maps.SupportMapFragment"
            android:id="@+id/map_fragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_map_btn"
            android:id="@+id/buttonMap"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </LinearLayout>

</RelativeLayout>
