<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/toggleBroadcastLocationSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottom_sheet_broadcast_location_toggle"
        android:background="@android:color/white"
        android:textColor="@color/textColorSecondary"
        android:padding="20dp"
        android:checked="false" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lineDivider"/>

    <RelativeLayout
        android:id="@+id/endTimePickerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/endTimePickerTitle"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="14dip"
            android:text="@string/bottom_sheet_broadcast_location_timepicker_title1"/>

        <LinearLayout
            android:id="@+id/endTimePickerIncr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/endTimePickerTitle"
            android:layout_marginLeft="78dp">

            <ImageButton
                android:id="@+id/endTimePickerHourIncr"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginRight="56dp"
                android:background="@drawable/ic_action_arrow_up_light"/>

            <ImageButton
                android:id="@+id/endTimePickerMinuteIncr"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@drawable/ic_action_arrow_up_light"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/endTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/endTimePickerIncr"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/endTimePickerHour"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="11dp"
                android:text="1"
                android:textSize="52dip">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:textSize="52dip"
                android:gravity="center"
                android:text=":"/>
            <TextView
                android:id="@+id/endTimePickerMinute"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="34dp"
                android:text="00"
                android:textSize="52dip">
            </TextView>
            <TextView
                android:id="@+id/endTimePickerAMPM"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_unit_before_noon"
                android:textSize="42dip">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/endTimePickerDecr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/endTimePicker"
            android:layout_marginLeft="78dp">

            <ImageButton
                android:id="@+id/endTimePickerHourDecr"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginRight="56dp"
                android:background="@drawable/ic_action_arrow_down_light"/>

            <ImageButton
                android:id="@+id/endTimePickerMinuteDecr"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@drawable/ic_action_arrow_down_light"/>

        </LinearLayout>

        <TextView
            android:id="@+id/endTimePickerSelect"
            android:layout_margin="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/endTimePickerDecr"
            android:textSize="14dip"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/bottom_sheet_broadcast_location_select_duration"/>

        <TextView
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/endTimePickerSelect"
            android:textSize="14dip"
            android:textColor="@color/textColorSecondary"
            android:text="@string/bottom_sheet_broadcast_location_change_interval"/>

    </RelativeLayout>
</LinearLayout>