<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_event"
    tools:context=".activities.EventActivity"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="34sp"
                android:hint="@string/hint_event_name" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/clear_name_button"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="32dp"
            android:layout_gravity="end"
            android:visibility="invisible"
            android:background="@android:drawable/ic_menu_close_clear_cancel" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_event_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_event_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/hint_event_start_date" />
        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_event_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_event_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:hint="@string/hint_event_time" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/clear_start_date_button"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="end"
                android:visibility="invisible"
                android:background="@android:drawable/ic_menu_close_clear_cancel" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_event_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_event_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/hint_event_end_date" />
        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_event_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_event_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:hint="@string/hint_event_time"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/clear_end_date_button"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="end"
                android:visibility="invisible"
                android:background="@android:drawable/ic_menu_close_clear_cancel" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.85">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_event_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_event_location" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/clear_location_button"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="end"
                android:visibility="invisible"
                android:background="@android:drawable/ic_menu_close_clear_cancel" />
        </FrameLayout>

        <Button
            android:id="@+id/pick_place_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:background="@drawable/ic_action_place_light"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/poweredBy"
        android:focusable="false"
        android:layout_marginRight="58dp"
        android:layout_marginEnd="58dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/powered_by_google_light"
        android:layout_gravity="end" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_event_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_event_note"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:lines="8"
            android:minLines="1"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:hint="@string/hint_note" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>
